--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dev": "ts-node -r tsconfig-paths/register src/main.ts",
     "watch": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "check-eth-tx": "ts-node -r tsconfig-paths/register src/check-eth-transaction.ts"
+    "check-eth-tx": "ts-node -r tsconfig-paths/register src/check-eth-transaction.ts",
+    "test-wallet": "ts-node -r tsconfig-paths/register src/test-wallet-debug.ts",
+    "test-wallet": "ts-node -r tsconfig-paths/register src/test-wallet-debug.ts"
   },
   "keywords": [
     "tron",
